<resources>
    <string name="app_name">WeatherVer2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="menu_city_list">City list</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_deleteAll">Delete All</string>
    <string name="home_second">Home Second</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="find_out_the_weather">Find out the weather</string>
    <string name="settings">settings</string>
    <string name="city_list">city list</string>
    <string name="city_info">city info</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="graphic_settings">Graphic Settings</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="weather_conditions">Weather conditions</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="history">history</string>
    <string name="title">Attention</string>
    <string name="yes">OK</string>
    <string name="message">City not found</string>
    <string name="moscow">Moscow</string>
    <string name="st_petersburg">St. Petersburg</string>
    <string name="arkhangelsk">Arkhangelsk</string>
    <string name="error">Network connection error</string>
    <string name="network_false">Network connection: false</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_on_the_map">find on the map</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="northern">Northern</string>
    <string name="northwestern">Northwestern</string>
    <string name="western">Western</string>
    <string name="southwestern">Southwestern</string>
    <string name="southern">Southern</string>
    <string name="southeastern">Southeastern</string>
    <string name="eastern">Eastern</string>
    <string name="northeastern">Northeastern</string>
</resources>
